--- a/FlutterDemo/fltapp/ios/Podfile
+++ b/FlutterDemo/fltapp/ios/Podfile
@@ -31,6 +31,7 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
   pod 'SnapKit'
+# Chrysan菊花浮图
   pod 'Chrysan'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
