--- a/FlutterDemo/fltapp/pubspec.yaml
+++ b/FlutterDemo/fltapp/pubspec.yaml
@@ -43,6 +43,15 @@ dependencies:
   transparent_image: ^2.0.0
   # flutter_screenutil三方开源包(屏幕适配工具)
   google_sign_in: ^5.0.0
+  #
+  mockito: ^5.4.0
+  #
+  json_serializable: ^6.7.1
+  #
+  build_runner: ^2.4.8
+  #
+
+
 
 
 
@@ -63,7 +72,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
