#应要求：所有待发布的应用都需要按照以下的格式填写，否则提交会被驳回 Type:ReqDev #提交描述 Desc: Version:

--- a/FlutterDemo/fltapp/pubspec.yaml
+++ b/FlutterDemo/fltapp/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   transparent_image: ^2.0.0
   # flutter_screenutil三方开源包(屏幕适配工具)
   google_sign_in: ^5.0.0
-  #
+  #搭建测试数据
   mockito: ^5.4.0
   #
   json_serializable: ^6.7.1
