--- a/FlutterDemo/fltapp/pubspec.yaml
+++ b/FlutterDemo/fltapp/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   transparent_image: ^2.0.0
   # flutter_screenutil三方开源包(屏幕适配工具)
   google_sign_in: ^5.4.4
+  # 供给器Provider
+  provider: ^6.0.5
   #搭建测试数据
   mockito: ^5.4.0
   #
@@ -54,6 +56,7 @@ dependencies:
   #
   build_runner: ^2.4.8
   #
+
 
 
 
